clean node mjpgConsumer

--- a/mjpgConsumer/mjpgConsumer.html
+++ b/mjpgConsumer/mjpgConsumer.html
@@ -32,7 +32,8 @@
 </script>
 
 <script type="text/x-red" data-help-name="mjpg-consumer">
-    <p>A node that pipes mjpeg streams</p>
+    <p>A node that pipes mjpeg streams as buffer on payload when input is true.</p>
+    <p>Stream Uri should be a valid mjpg streamer source</p>
     <div>
 
     </div>
