--- a/mjpgConsumer/mjpgConsumer.html
+++ b/mjpgConsumer/mjpgConsumer.html
@@ -4,7 +4,8 @@
         color: '#a6bbcf',
         defaults: {
             name: {value:""},
-            stream: {value:"http://localhost:8080?action=stream"}
+            stream: {value:"http://localhost:8080?action=stream"},
+            interval: {value:1}
         },
         inputs:1,
         outputs:1,
@@ -27,6 +28,10 @@
     <div class="form-row">
         <label for="node-input-stream"><i class="icon-tag"></i> Stream</label>
         <input type="text" id="node-input-stream">
+    </div>
+    <div class="form-row">
+        <label for="node-input-interval"><i class="icon-tag"></i>Streaming interval (seconds)</label>
+        <input type="number" id="node-input-interval">
     </div>
 
 </script>
